--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -10,4 +10,7 @@ spring:
     name: gateway-service
   profiles:
     active: dev
+  main:
+    web-application-type: reactive
+    allow-circular-references: true
 
