--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.1'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+	implementation 'io.github.openfeign:feign-jackson:12.2' // or the latest version
+
+
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
